/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The CallMananger proto contains the artificats for the call mananger
 * such as creation and deployment.
 */
syntax = "proto3";

package fonos.callmanager.v1beta1;

service CallManager {
  // Originates a call and pass channel to an application
  rpc Call (CallRequest) returns (CallResponse) {};
}

message CallRequest {
  // Origination number
  string from = 1;
  // Destination number
  string to = 2;
  // Level of detail of the individual entities
  string webhook = 3;
  // If enabled it will accept any input in the from and to
  bool ignore_e164_validation = 4;
  // Metadata from the user
  string metadata = 5;
}

message CallResponse {
  string ref = 1;
}
